Squashing UI bugs, flex-gap not supported for older browsers.

--- a/src/App.css
+++ b/src/App.css
@@ -271,7 +271,6 @@ button:disabled {
 .alert_box {
   right: 16px;
   display: inline-flex;
-  gap: 16px;
   justify-content: space-between;
   align-items: center;
   padding: 16px;
@@ -291,11 +290,11 @@ button:disabled {
 
 .alert_text {
   font-size: 1.385rem;
+  margin-left: 8px;
 }
 
 .alert_box div {
   display: flex;
-  gap: 8px;
 }
 
 @media screen and (min-width: 1080px) {
